RESOLVED FIXED269138
Explore using `:focus-visible` in html.css instead of `:focus'
https://bugs.webkit.org/show_bug.cgi?id=269138
Summary Explore using `:focus-visible` in html.css instead of `:focus'
Ahmad Saleem
Reported 2024-02-10 09:22:57 PST
Hi Team, While looking into Blink vs WebKit UA stylesheet, I noticed that :focus-visible is used more extensively as compared to our UA stylesheet rule. Should we do so same? Just wanted to raise this for input. Thanks!
Attachments
Patch based on Blink Commit (6.67 KB, patch)
2025-05-10 21:53 PDT, Ahmad Saleem
no flags
Radar WebKit Bug Importer
Comment 1 2024-02-17 09:23:14 PST
Ahmad Saleem
Comment 2 2025-05-10 21:07:11 PDT
Web Specification - https://drafts.csswg.org/selectors-4/#the-focus-visible-pseudo "User agents should also use :focus-visible to specify the default focus style, so that authors using :focus-visible will not also need to disable the default :focus style."
Ahmad Saleem
Comment 3 2025-05-10 21:53:36 PDT
Ahmad Saleem
Comment 4 2025-06-17 00:14:10 PDT
EWS
Comment 5 2025-11-29 10:33:22 PST
Committed 303643@main (70f3146b713f): <https://commits.webkit.org/303643@main> Reviewed commits have been landed. Closing PR #46836 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.