Change default UA style sheet to use `:focus-visble`

https://bugs.webkit.org/show_bug.cgi?id=269138
rdar://123155364

Reviewed by NOBODY (OOPS!).

Merge: https://source.chromium.org/chromium/chromium/src/+/c3102c24006870f7f08444133209998b5b74aa54

This patch changes from :focus to :focus-visible in the UA style sheet
when :focus was used to set outline properties. This aligns with [1]:

[1] https://drafts.csswg.org/selectors-4/#the-focus-visible-pseudo

"User agents should also use :focus-visible to specify the default focus style,
so that authors using :focus-visible will not also need to disable the default
:focus style."

* Source/WebCore/css/html.css:
(html:focus-visible, body:focus-visible, input[readonly]:focus, embed:focus-visible, iframe:focus-visible, object:focus-visible):
(#if !defined(WTF_PLATFORM_IOS_FAMILY) || !WTF_PLATFORM_IOS_FAMILY):
(#endif):
(html:focus, body:focus, input[readonly]:focus, embed:focus, iframe:focus, object:focus): Deleted.
* Source/WebCore/style/ElementRuleCollector.cpp:
(WebCore::Style::ElementRuleCollector::collectMatchingRules):
* Source/WebCore/style/RuleSet.cpp:
(WebCore::Style::RuleSet::addRule):
(WebCore::Style::RuleSet::traverseRuleDatas):
(WebCore::Style::RuleSet::shrinkToFit):
* Source/WebCore/style/RuleSet.h:
(WebCore::Style::RuleSet::focusVisiblePseudoClassRules const):
* LayoutTests/imported/blink/fast/events/click-focus-anchor-has-no-ring.html:
* LayoutTests/imported/blink/fast/events/click-focus-anchor-has-no-ring-expected.html: